<resources>
    <string name="app_name">AplicacionNotas</string>
    <string name="login">Login</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="registro">Registrarse</string>
    <string name="volver">Volver</string>
    <string name="add">Añadir</string>
    <string name="ver">Ver Notas</string>
    <string name="logout">Desconectar</string>
    <string name="principal">Menú Principal</string>
    <string name="perfil">Perfil</string>
    <string name="crearNota">Crear Nota</string>
    <string name="verNotas">Mis Notas</string>
    <string name="edit">Editar</string>
    <string name="editperfil">Editar Perfil</string>
    <string name="foto">Añadir foto</string>
    <string name="addNote">Añadir nota</string>
    <string name="titulo">Título</string>
    <string name="nota">Nota</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="camara">Camara</string>
</resources>